Cập nhật dashboard

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
                   <span>Trang chủ</span></a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link" routerLink="dashboard"              >
+            <a class="nav-link" routerLink="project"              >
                 <i class="fas fa-fw fa-tachometer-alt"></i>
                 <span>Danh sách dự án</span></a>
           </li>
@@ -52,33 +52,26 @@
          
       </ul>
      
-      <div id="content-wrapper" class="d-flex flex-column">
-
-   
+      <div id="content-wrapper" class="d-flex flex-column">   
           <div id="content">
-
-    
-              <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
-
+              <nav class="navbar navbar-expand navbar-light bg-white topbar mb-2 static-top shadow">
                 <div
-                class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100">
-                <div class="">
-                    <strong>QUẢN LÝ DỰ ÁN ĐẦU TƯ XÂY DỰNG</strong>
+                class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-1 my-md-0 mw-100">
+                    <div class="">
+                        <strong>QUẢN LÝ DỰ ÁN ĐẦU TƯ XÂY DỰNG</strong>
+                    </div>
                 </div>
-            </div>
               </nav>
         
               <div class="container-fluid">
                 <router-outlet></router-outlet>
               </div>
-           
-
           </div>
 
           <footer class="sticky-footer bg-white">
               <div class="container my-auto">
                   <div class="copyright text-center my-auto">
-                      <span>Copyright &copy; Your Website 2023 Nguyen Van Vu Linh</span>
+                      <span>Copyright &copy; Your Website 2024 Nguyen Van Vu Linh - VNPT An Giang</span>
                   </div>
               </div>
           </footer>
