--- a/src/app/componets/employee/employee.component.html
+++ b/src/app/componets/employee/employee.component.html
@@ -2,7 +2,7 @@
 <div class="d-sm-flex align-items-center justify-content-between mb-4">
     <h1 class="h3 mb-0 text-gray-800">DANH SÁCH NHÂN VIÊN</h1>
     
-        <button class="btn btn-primary" style="margin-top: 0;" (click)="openDialog()">Thêm nhân viên</button>
+        <button class="btn btn-primary" (click)="openDialog()">Thêm nhân viên</button>
 
   </div>
 <div class="mt-3">
