--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -68,7 +68,7 @@
               </div>
           </div>
 
-          <footer class="sticky-footer bg-white">
+          <footer class="sticky-footer bg-white p-3">
               <div class="container my-auto">
                   <div class="copyright text-center my-auto">
                       <span>Copyright &copy; Your Website 2024 Nguyen Van Vu Linh - VNPT An Giang</span>
