--- a/src/app/componets/project/project.component.html
+++ b/src/app/componets/project/project.component.html
@@ -1,9 +1,9 @@
 
-<div class="d-sm-flex align-items-center justify-content-between mb-4">
+<div class="d-sm-flex align-items-center justify-content-between mb-2">
     <h1 class="h3 mb-0 text-gray-800">DANH SÁCH DỰ ÁN</h1>
-        <button class="btn btn-primary" (click)="openDialog()">Khởi tạo dự án</button>
-  </div>
-<div class="mt-3">
+    <button class="btn btn-primary" (click)="openDialog()">Khởi tạo dự án</button>
+</div>
+<div class="">
         <table mat-table [dataSource]="dataSource">
             <ng-container matColumnDef="no" style="width: 5%;">
                 <th mat-header-cell *matHeaderCellDef >STT</th>
