--- a/src/app/componets/project/dialog-delete-project/dialog-delete-project.component.html
+++ b/src/app/componets/project/dialog-delete-project/dialog-delete-project.component.html
@@ -1,1 +1,16 @@
-<p>dialog-delete-project works!</p>
+
+<div class="m-3 p-2">
+    <h3 class="font-weight-bold text-center">Xóa dự án</h3>
+        <p>
+            Bạn có chắc chắn xóa dự án {{this.data.name}} không?
+        </p>
+      
+      <div class="d-flex justify-content-end mt-3">
+        <button (click)="onClose()" class="btn btn-danger me-3">Đóng</button>
+        <button (click)="onSubmit()" type="submit" class="btn btn-primary ">
+          Lưu
+        </button>
+      </div>
+  </div>
+
+
