--- a/src/app/componets/project/project.component.html
+++ b/src/app/componets/project/project.component.html
@@ -22,12 +22,12 @@
 
             <ng-container matColumnDef="startDate" style="width: 20%;">
                 <th mat-header-cell *matHeaderCellDef >Ngày bắt đầu</th>
-                <td mat-cell *matCellDef="let row;"> {{row.startDate}} </td>
+                <td mat-cell *matCellDef="let row;"> {{row.startDate | date:'dd-MM-yyyy'}} </td>
             </ng-container>
 
             <ng-container matColumnDef="endDate" style="width: 20%;">
                 <th mat-header-cell *matHeaderCellDef >Ngày kết thúc</th>
-                <td mat-cell *matCellDef="let row;"> {{row.endDate}} </td>
+                <td mat-cell *matCellDef="let row;"> {{row.endDate | date:'dd-MM-yyyy'}} </td>
             </ng-container>
 
             <ng-container matColumnDef="completeDate" style="width: 20%;">
@@ -45,7 +45,7 @@
                 <td mat-cell *matCellDef="let row;"> 
                     <div>
                         <button (click)="openDialogEdit(row.id)" class="btn btn-warning me-2"><i class="fas fa-edit"></i>Sửa</button>
-                        <button (click)="openDialogDelete(row.id, row.fullName)" class="btn btn-danger"><i class="fas fa-trash-alt"></i> Xóa</button>
+                        <button (click)="openDialogDelete(row.id, row.name)" class="btn btn-danger"><i class="fas fa-trash-alt"></i> Xóa</button>
                     </div>
                 </td>
             </ng-container>
